--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,14 @@
         "lib": [
             "es2015",
             "esnext"
+        ],
+        "typeRoots": [
+            "./node_modules/@types"
         ]
     },
     "include": [
-        "./server/**/*"
+        "./server/**/*",
+        "./client/**/*"
     ],
     "tslint": {
         "args": ["--project", "./"]
